--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -13,6 +13,40 @@ body {
 	font-family:'Ubuntu',Arial;
 }
 
+/* CODE FOUND HERE: 
+/*	http://www.webdesignerdepot.com/2012/11/how-to-create-a-simple-css3-tooltip/
+/*/
+
+.tooltip {
+	display:inline;
+	position:relative;
+}
+
+.tooltip:hover:before{
+    border: solid;
+    border-color: #333 transparent;
+    border-width: 6px 6px 0 6px;
+    bottom: 20px;
+    content: "";
+    left: 50%;
+    position: absolute;
+    z-index: 99;
+}
+
+.tooltip:hover:after{
+    background: #333;
+    background: rgba(0,0,0,.8);
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(title);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+}
+
 /*********************/
 /*   Navbar/Header   */
 /*********************/
