changed search to query

--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -459,7 +459,7 @@ div.floatingNavigation a:hover {
 	background-color: #2491DD;
 }
 
-div#advancedSearchContainer {
+div#advancedQueryContainer {
 	display:none;
 }
 
