--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -276,6 +276,33 @@ div.order-wrapper {
 	margin:0 10%;
 }
 
+/*Popup Stuff*/
+.black_overlay{
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index:1001;
+	opacity:.50;
+}
+
+.white_content {
+	display: none;
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	width: 50%;
+	height: 50%;
+	padding: 16px;
+	border: 16px solid #2491FF;
+	background-color: white;
+	z-index:1002;
+	overflow: auto;
+}
+
 /********************/
 /*   Availability   */
 /********************/
