--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -12,6 +12,7 @@ body {
 	font-size:16px;
 	font-family:'Ubuntu',Arial;
 	background-color: rgba(0,0,150,.02);
+	color:#555;
 }
 
 div {
@@ -201,6 +202,7 @@ div#aboutWrapper {
 div.floatingBox {
 	border: 1px solid rgba(0,0,0,0.15);
 	background-color: white;
+	box-shadow: 2px 2px 10px rgba(0,0,0,0.035);
 }
 
 div.darkFloatingBox h1 {
@@ -271,49 +273,22 @@ input[type='button']:hover, input[type='submit']:hover {
 }
 
 
+/********************/
+/*   Edit Account   */
+/********************/
 
-
-
-/*.content {
-	display: block:;
-	width:50%;
-	min-height: wrap;
-	margin: 0 auto;
-	height: 90%;
-	border-right: 1px solid rgba(0,0,0,0.15);
-	border-left: 1px solid rgba(0,0,0,0.15);
+/*   Customers   */
+div.accountWrapper {
+	width:460px;
+	display: block;
+	margin: 36px auto auto auto;
 }
 
-.content > div {
-	border-bottom: 1px solid rgba(0,0,0,0.15);
+/*   Admin   */
+label {
+	font-family:'Lato';
+	color:#999;
 }
-
-.content >div:last-child {
-	border-bottom: none;
-}
-
-.accountForm {
-	display:block;
-	text-align: center;
-	padding:1em;
-	width:100;
-}
-
-.accountForm input[type="submit"] {
-	clear:left;
-	display:block;
-	margin-left:auto;
-	margin-right:auto;
-}
-
-.login h1 {
-	margin:0.4em;
-	padding:0;
-}
-
-.textForm{
-	margin-bottom: 10px;
-}*/
 
 /*************/
 /*   Order   */
@@ -487,44 +462,89 @@ div.order-wrapper {
 
 
 /**************************/
-/*		  Account         */
-/**************************/
-#editAccountForm{
-	margin: 0 auto;
-	padding-bottom: 1px;
-	width: 25%;
-	text-align: center;
-	background-color: #EBF5FF;
-	border-radius: 10px; 
-}
-
-#editAccountForm input{
-	display:block;
-	margin: 10px auto;
-
-}
-
-#editAccountForm h2{
-	background-color:#2491FF;
-	color: #FFFFFF;
-	-webkit-border-top-left-radius: 10px;
-	-webkit-border-top-right-radius: 10px;
-}
-
-
-
-
-/**************************/
 /*   Administrator Menu   */
 /**************************/
 
 
-div.wrapper {
+div#adminMenuWrapper {
 	width:80%;
-	margin:25px auto;
+	margin: 24px auto;
+	display: block;
 }
 
-div.box {
+div#menuDisplayWrapper img {
+	height:22px;
+	vertical-align: text-bottom;
+	float:right;
+	margin-left: 8px;
+}
+
+div#menuDisplayWrapper img:hover {
+	opacity:0.7;
+	cursor:pointer;
+}
+
+div#menuDisplayWrapper div {
+	float:left;
+}
+
+div#menuDisplayTypeView {
+	width:75%;
+}
+
+div#menuDisplayTypeView li {
+	list-style: none;
+	margin: 14px;
+}
+
+div#menuDisplayTypeView div.floatingBox {
+	padding: 10px;
+}
+
+div#menuDisplayTypeView input, div#menuDisplayTypeView label {
+	float:right;
+}
+
+div#menuDisplayTypeSelector {
+	width:25%;
+	border-right: none;
+	padding-top: 12px;
+}
+
+div#menuDisplayWrapper {
+	width:59.5%;
+	float:right;
+	display: block;
+	margin-right: 0.5%;
+}
+
+div#addItemFormWrapper {
+	width:40%;
+	float:right;
+	display: block;
+}
+
+div.typeSelect:hover {
+	transition: all 0.3s ease-out;
+	text-indent: 9px;
+	cursor: pointer;
+	background: rgba(0,0,0,0.02);
+}
+
+div.typeSelect {
+	width:100%;
+	height:1.8em;
+	font-size: 18px;
+	text-indent: 8px;
+}
+
+div.typeSelect span {
+	vertical-align: middle;
+	display: inline-block;
+	line-height: 1.8em;
+}
+
+/*div.box {
 	border: 1px solid rgba(0,0,0,0.15);
 	box-sizing:border-box;
 	float: left;
@@ -542,7 +562,7 @@ div#menu-categories-edit-pane{
 
 div#menu-categories-edit-pane > div {
 	width:100%;
-}
+}*/
 
 /*****************/
 /*   Data Page   */
