Queue page updates

--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -12,7 +12,6 @@ body {
 	font-size:16px;
 	font-family:'Ubuntu',Arial;
 	background-color: rgba(0,0,150,.02);
-	color:#555;
 }
 
 div {
@@ -101,15 +100,20 @@ nav a:hover {
 /********************/
 /*   Queue Window   */
 /********************/
-.window {
+#queueWindow {
 	width:80%;
-	height:100%;
+	height:90%;
 	z-index:1;
 }
 
-.window > h1 {
+#queueWindow > h1 {
 	color: #AAA;
 	text-align: center;
+}
+
+section.queue:hover {
+	background-color: rgba(0,32,255,0.04);
+	cursor: pointer;
 }
 
 .queue {
@@ -138,7 +142,7 @@ nav a:hover {
 /***************/
 /*   Sidebar   */
 /***************/
-.sidebar {
+#sidebar {
 	width:20%;
 	height:100%;
 	position:absolute;
@@ -150,18 +154,18 @@ nav a:hover {
 	background-color: rgba(0,0,0,0.3);
 }
 
-.sidebar #quantityList{
+#sidebar #quantityList{
 	margin-left: 5%;
 	font-size: 20px;
 }
 
-.sidebar img {
+#sidebar img {
 	height: 3.5em;
 	width:auto;
 	float: left;
 }
 
-.sidebar img:hover {
+#sidebar img:hover {
 	opacity: .6;
 }
 
@@ -177,11 +181,6 @@ nav a:hover {
 	position: absolute;
 	bottom:0;
 	margin: 0.5em 0;
-}
-
-.sidebar button {
-	width: 80%;
-	margin: 0 10%;
 }
 
 /*******************/
@@ -203,6 +202,7 @@ div.floatingBox {
 	border: 1px solid rgba(0,0,0,0.15);
 	background-color: white;
 	box-shadow: 2px 2px 10px rgba(0,0,0,0.035);
+	color:#555;
 }
 
 div.darkFloatingBox h1 {
