Unavailable ingredients are greyed out instead

--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -354,6 +354,15 @@ div.order-wrapper {
 	margin:0 10%;
 }
 
+.outOfStock{
+	color: red;
+	-moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
 /*Popup Stuff*/
 .black_overlay{
 	display: none;
