--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -631,9 +631,21 @@ div#advancedQueryContainer {
 }
 
 
+/****************/
+/* Edit Account */
+/****************/
 
+#passWrap {
+	margin-top:10px;
+}
 
+#emailWrap {
+	margin-bottom:10px;
+}
 
+div form h2{
+	text-align: center;
+}
 
 
 
