--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -128,6 +128,7 @@ section.queue:hover {
 	float:left;
 	border-bottom: 1px solid rgba(0,0,0,0.15);
 	border-right: 1px solid rgba(0,0,0,0.15);
+	position: relative;
 }
 
 .queue h1 {
@@ -140,6 +141,31 @@ section.queue:hover {
 	padding-left:0;
 }
 
+.queue ul li {
+	margin: 0.3em 0;
+}
+
+.queue .orderHelpMessage {
+	position:absolute;
+	bottom:0.4em;
+	left:0;
+	right:0;
+	text-align: center;
+	font-family: 'Lato';
+}
+
+li.orderName {
+	width: 100%;
+	text-align: right;
+}
+
+li.orderToppings {
+	font-size: 1.05em;
+}
+
+li.orderBase, li.orderBread, li.orderCheese {
+	font-size: 1.25em;
+}
 
 /***************/
 /*   Sidebar   */
