--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -232,10 +232,21 @@ div#aboutWrapper {
 	position: absolute;
 	right: 8%;
 	left:auto;
-	top: 160px;
+	top: 1%;
 	color: rgba(0,0,0,0.65);
 	font-size: 1.2em;
-	line-height: 1.6em;
+	line-height: 1.5em;
+}
+
+div#aboutWrapper img{
+	max-height: 35%;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div#aboutWrapper p{
+	margin-top: 0;
 }
 
 /*  Div box thing  */
