--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -185,6 +185,8 @@ div#sidebar {
 
 div#sidebar div#quantityList{
 	font-size: 20px;
+	margin: 1em;
+	font-size: 1.4em;
 }
 
 div#sidebar img {
@@ -223,6 +225,10 @@ div#sidebarInputContainer {
 
 div#quantityList span {
 	float:right;
+}
+
+div#quantityList div {
+	margin: 0.4em 0;
 }
 
 /*******************/
@@ -542,7 +548,7 @@ div#adminMenuWrapper {
 }
 
 div#menuDisplayWrapper img {
-	height:22px;
+	height:1.4em;
 	vertical-align: text-bottom;
 	float:right;
 	margin-left: 8px;
@@ -566,6 +572,14 @@ div#menuDisplayTypeView li {
 	margin: 14px;
 }
 
+div#menuDisplayTypeView span {
+	font-size: 1.4em;
+}
+
+div#menuDisplayTypeView label {
+	font-size: 1.1em;
+}
+
 div#menuDisplayTypeView div.floatingBox {
 	padding: 10px;
 }
@@ -578,6 +592,11 @@ div#menuDisplayTypeSelector {
 	width:25%;
 	border-right: none;
 	padding-top: 12px;
+	font-size: 1.3em;
+}
+
+div#menuDisplayTypeSelector input[type='checkbox'] {
+	vertical-align: center;
 }
 
 div#menuDisplayWrapper {
@@ -594,17 +613,28 @@ div#addItemFormWrapper {
 }
 
 div.typeSelect:hover {
-	transition: all 0.3s ease-out;
-	text-indent: 9px;
+	transition: border-left-width 0.3s ease-out;
+	border-left: 2px solid rgba(36,145,255,0.2);
 	cursor: pointer;
-	background: rgba(0,0,0,0.02);
+}
+
+div.selected {
+	transition: all 0.3s ease;
+	border-left: 4px solid rgba(36,145,255,0.76);
+	background-color: rgba(36,145,255,0.025);
+}
+
+div.selected:hover {
+	transition: all 0.3s ease;
+	border-left: 4px solid rgba(36,145,255,0.6);
+	background-color: rgba(36,145,255,0.01);
+	cursor: pointer
 }
 
 div.typeSelect {
 	width:100%;
 	height:1.8em;
-	font-size: 18px;
-	text-indent: 8px;
+	text-indent: 6px;
 }
 
 div.typeSelect span {
@@ -613,25 +643,7 @@ div.typeSelect span {
 	line-height: 1.8em;
 }
 
-/*div.box {
-	border: 1px solid rgba(0,0,0,0.15);
-	box-sizing:border-box;
-	float: left;
-	padding: 1em;
-}
-
-div#menu-categories-pane {
-	width:30%;
-}
-
-div#menu-categories-edit-pane{
-	width:70%;
-	float:left;
-}
-
-div#menu-categories-edit-pane > div {
-	width:100%;
-}*/
+div
 
 /*****************/
 /*   Data Page   */
