--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -334,24 +334,6 @@ input[type='button']:hover, input[type='submit']:hover {
 	background-color: rgba(36,145,255,0.7);
 }
 
-
-/********************/
-/*   Edit Account   */
-/********************/
-
-/*   Customers   */
-div.accountWrapper {
-	width:460px;
-	display: block;
-	margin: 36px auto auto auto;
-}
-
-/*   Admin   */
-label {
-	font-family:'Lato';
-	color:#999;
-}
-
 /*************/
 /*   Order   */
 /*************/
@@ -702,16 +684,16 @@ div#advancedQueryContainer {
 /* Edit Account */
 /****************/
 
-#passWrap {
-	margin-top:10px;
+/*   Customers   */
+div.accountWrapper {
+	width:36%;
+	min-width: 420px;
+	display: block;
+	margin: 36px auto auto auto;
 }
 
-#emailWrap {
-	margin-bottom:10px;
-}
-
-div form h2{
-	text-align: center;
+div.accountWrapper div.floatingBox {
+	margin: 2em 0;
 }
 
 /******************/
