--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -18,6 +18,10 @@ div {
 	box-sizing:border-box;
 }
 
+h2 {
+	text-align: center;
+}
+
 /* CODE FOUND HERE: 
 /*	http://www.webdesignerdepot.com/2012/11/how-to-create-a-simple-css3-tooltip/
 /*/
@@ -331,8 +335,41 @@ input[type='button'], input[type='submit'] {
 }
 
 input[type='button']:hover, input[type='submit']:hover {
+
 	background-color: rgba(36,145,255,0.7);
 }
+
+#adminCreateAccountForm  label {
+	background-color: rgba(36,145,255,0.0);
+	border-bottom: 1px solid rgba(0,0,0,0.15);
+	padding:0.75em 0;
+	font-family: 'Lato';
+	font-weight: bold;
+	font-size: 1.25em;
+	color:rgba(0,0, 0, .25);
+	width:10em;
+	display: block;
+	-webkit-padding-start:0px;
+	width: 50%;
+	text-align: center;
+	float:left;
+	margin-bottom: 1em;
+}
+
+#adminCreateAccountForm  label:hover {
+	background-color: rgba(36,145,255,0.25);
+}
+
+#adminCreateAccountForm input[type='radio']:checked + label{
+    background-color:rgba(36,145,255,0.50);
+    color:rgba(255, 255, 255, 1);
+
+}
+
+#adminCreateAccountForm input[type='radio'] {
+	display:none; 
+}
+
 
 
 /********************/
